# Initial

./: CMakeLists.txt  README.md  meow.txt  nomeow.txt
src/: main.cpp
tests/: webcam_test.cpp
